<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eventsListFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        android:contentDescription="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar"
        android:contentDescription="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile"
        android:contentDescription="@string/profile"
        app:showAsAction="ifRoom" />
</menu>